--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,4 +4,7 @@ j2ee.server.domain=/home/leon/GlassFish_Server/glassfish/domains/domain0
 j2ee.server.home=/home/leon/GlassFish_Server/glassfish
 j2ee.server.instance=[/home/leon/GlassFish_Server/glassfish:/home/leon/GlassFish_Server/glassfish/domains/domain0]deployer:gfv3ee6wc:localhost:39782
 j2ee.server.middleware=/home/leon/GlassFish_Server
+javac.debug=true
+javadoc.preview=true
+selected.browser=default
 user.properties.file=/home/leon/.netbeans/12.3/build.properties
