--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,6 +4,10 @@
         <param-name>javax.faces.PROJECT_STAGE</param-name>
         <param-value>Development</param-value>
     </context-param>
+    <context-param>
+        <param-name>location</param-name>
+        <param-value>/mnt/leon/leon/projects/BetterCanvas/web/resources/images/</param-value>
+    </context-param>
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
