--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -43,7 +43,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv5ee8
 jar.compress=false
 javac.classpath=\
-    ${libs.JAVADB_DRIVER_LABEL.classpath}
+    ${libs.JAVADB_DRIVER_LABEL.classpath}:\
+    ${libs.javaee-web-api-7.0.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
